--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Welcome to Dinesh's World!
+subtitle: A Machine Learning,Deep Learning and Robotics Enthusiast Doing Random Experiments
 use-site-title: true
 ---
 
